Mon Apr 15 22:25:28 2002  Balachandran Natarajan  <bala@cs.wustl.edu>

	* THANKS: Added Andrew Guy to the hallf of fame.

Mon Apr 15 21:43:44 2002  Krishnakumar B  <kitty@cs.wustl.edu>

        * ace/Log_Msg.cpp (log):
        * ace/Log_Msg.h:

          Added new option '@' to ACE_Log_Msg to print out pointers in
          hexadecimal format. This is equivalent to the "%p" option of the
          standard C library printf.

Mon Apr 15 14:04:28 2002  Ossama Othman  <ossama@uci.edu>

	* ace/Dev_Poll_Reactor.h:
	* ace/Dev_Poll_Reactor.inl:
	* ace/Dev_Poll_Reactor.cpp:

	  Experimental implementation of a /dev/poll (or Linux /dev/epoll)
	  based Reactor.  Refinements will be committed to the
	  implementation very soon.

Mon Apr 15 11:29:49 2002  Ossama Othman  <ossama@uci.edu>

	* ace/config-win32-msvc-7.h (ACE_NEEDS_FUNC_DEFINITIONS):

	  MSVC 7 requires "hidden" functions/methods to be defined.  A
	  declaration is not enough.  Fixes link-time "unresolved symbol"
	  errors when using the ACE_UNIMPLEMENTED_FUNC macro in exported
	  templates.

Mon Apr 15 16:20:12 UTC 2002  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Timer_Queue_Adapters.{h,i,cpp}:
          Made several additions to the ACE_Thread_Timer_Queue_Adapter
          - Make it possible to pass a timer queue instance to the
            ACE_Thread_Timer_Queue_Adapter instance using the constructor
          - Make it possible to get/set the timer queue based on pointers, the
            get method with a & is still available, but is marked as deprecated
          - Make the thr_id method const
          - When the timer queue is created by the ACE_Thread_Timer_Queue_Adapter
            then it is also deleted, if it is passed or set afterwards it isn't
            deleted by ACE_Thread_Timer_Queue_Adapter (just like in the
            ACE_Reactor).

Mon Apr 15 10:22:12 UTC 2002  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Containers_T.h:
          Doxygen-ized some of the comments
